add Calculator app; note: MDAS rule not yet implemented

--- a/src/app/Components/Button/Button.css
+++ b/src/app/Components/Button/Button.css
@@ -3,6 +3,6 @@
     border: 5px solid black;
     height: 50px;
     width: 50px;
-    margin: 0 10px;
+    margin: 5px 10px;
     cursor: pointer;
 }
